<?php

namespace App\Models;

use App\Enums\EventApplicationStatus;
use App\Traits\HasCampusScope;
use Database\Factories\EventFactory;
use Illuminate\Database\Eloquent\Attributes\Fillable;
use Illuminate\Database\Eloquent\Attributes\Scope;
use Illuminate\Database\Eloquent\Builder;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\BelongsToMany;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Support\Carbon;

/**
 * @property int $id
 * @property int $organizer_id
 * @property int|null $talent_id
 * @property string $title
 * @property string $description
 * @property string|null $location
 * @property Carbon $starts_at
 * @property Carbon|null $ends_at
 * @property Carbon|null $application_deadline
 * @property int|null $capacity
 * @property bool $is_published
 * @property Carbon|null $created_at
 * @property Carbon|null $updated_at
 */
#[Fillable(['organizer_id', 'talent_id', 'event_type', 'title', 'description', 'requirements', 'location', 'contact_email', 'contact_phone', 'contact_instructions', 'cover_image', 'starts_at', 'ends_at', 'application_deadline', 'capacity', 'is_published'])]
class Event extends Model
{
    /** @use HasFactory<EventFactory> */
    use HasCampusScope, HasFactory;

    /**
     * @var array<string, mixed>
     */
    protected $attributes = [
        'is_published' => false,
    ];

    /**
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'starts_at' => 'datetime',
            'ends_at' => 'datetime',
            'application_deadline' => 'datetime',
            'is_published' => 'boolean',
            'capacity' => 'integer',
        ];
    }

    public function organizer(): BelongsTo
    {
        return $this->belongsTo(User::class, 'organizer_id');
    }

    public function talent(): BelongsTo
    {
        return $this->belongsTo(Talent::class);
    }

    public function talents(): BelongsToMany
    {
        return $this->belongsToMany(Talent::class, 'event_talents')
            ->withPivot(['id', 'slots', 'notes'])
            ->withTimestamps();
    }

    public function applications(): HasMany
    {
        return $this->hasMany(EventApplication::class);
    }

    public function acceptedApplications(): HasMany
    {
        return $this->hasMany(EventApplication::class)->where('status', EventApplicationStatus::Accepted);
    }

    public function invitations(): HasMany
    {
        return $this->hasMany(EventInvitation::class);
    }

    #[Scope]
    protected function published(Builder $query): Builder
    {
        return $query->where('is_published', true);
    }

    #[Scope]
    protected function upcoming(Builder $query): Builder
    {
        return $query->where('starts_at', '>=', now())->orderBy('starts_at');
    }
}
