<?php

namespace App\Models;

use App\Enums\EventApplicationStatus;
use Database\Factories\EventApplicationFactory;
use Illuminate\Database\Eloquent\Attributes\Fillable;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Support\Carbon;

/**
 * @property int $id
 * @property int $event_id
 * @property int $user_id
 * @property EventApplicationStatus $status
 * @property string|null $message
 * @property Carbon|null $created_at
 * @property Carbon|null $updated_at
 */
#[Fillable(['event_id', 'user_id', 'talent_id', 'status', 'message'])]
class EventApplication extends Model
{
    /** @use HasFactory<EventApplicationFactory> */
    use HasFactory;

    /**
     * @var array<string, mixed>
     */
    protected $attributes = [
        'status' => 'pending',
    ];

    /**
     * @return array<string, string>
     */
    protected function casts(): array
    {
        return [
            'status' => EventApplicationStatus::class,
        ];
    }

    public function event(): BelongsTo
    {
        return $this->belongsTo(Event::class);
    }

    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    public function talent(): BelongsTo
    {
        return $this->belongsTo(Talent::class);
    }

    public function isAccepted(): bool
    {
        return $this->status === EventApplicationStatus::Accepted;
    }

    public function isPending(): bool
    {
        return $this->status === EventApplicationStatus::Pending;
    }

    public function isDeclined(): bool
    {
        return $this->status === EventApplicationStatus::Declined;
    }
}
